--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
         <div class="article-content-btn1">
           <button>
             <a
-              href="https://github.com/Nishanth939/WordConverter"
+              href="https://github.com/nishanth-rathod/WordConverter"
               target="_blank"
               >View Code</a
             >
@@ -702,7 +702,8 @@
         <div class="article-content-btn2">
           <button>
             <a
-              href="https://github.com/Nishanth939/NishanthNews"
+              r
+              href="https://github.com/nishanth-rathod/NishanthNews"
               target="_blank"
               >View Code</a
             >
@@ -719,7 +720,7 @@
         <div class="article-content-btn3">
           <button>
             <a
-              href="https://github.com/Nishanth939/NishanthNotes"
+              href="https://github.com/nishanth-rathod/NishanthNotes"
               target="_blank"
               >View Code</a
             >
@@ -736,14 +737,14 @@
         <div class="article-content-btn4">
           <button>
             <a
-              href="https://github.com/Nishanth939/NishanthWebsite"
+              href="https://github.com/nishanth-rathod/NishanthWebsite"
               target="_blank"
               >View Code</a
             >
           </button>
           <button>
             <a
-              href="https://nishanth939.github.io/NishanthWebsite/"
+              href="https://nishanth-rathod.github.io/NishanthWebsite/"
               target="_blank"
               >View Website</a
             >
@@ -756,7 +757,7 @@
       <div class="footer-container">
         <ul class="footer-container-ul">
           <li>
-            <a href="https://github.com/Nishanth939" target="_blank"
+            <a href="https://github.com/nishanth-rathod" target="_blank"
               ><i class="fa fa-github"></i
             ></a>
           </li>
